--- a/insta-clone-frontend/src/App.css
+++ b/insta-clone-frontend/src/App.css
@@ -18,13 +18,61 @@ ul{
   gap: 2rem;
 }
 
-/*||NAVBAR  */
+a{
+  display: flex;
+  justify-content: center;
+}
 
+a:-webkit-any-link{
+  color: black;
+}
+
+/*||NAVBAR  */
+@font-face {
+  font-family: "insta-font";
+  src: url(../assets/fonts/GrandHotel-Regular.ttf);
+}
+
+.logo, .cardTitle{
+  font-family: "insta-font";
+  font-size: 4rem;
+}
 .nav-bar{
   display: flex;
-  font-size: 3rem;
+  font-size: 2.5rem;
   justify-content: space-between;
   padding: 1.5rem;
   background-color: beige;
-
 }
+
+/*||login card  */
+.card{
+  display: flex;
+  width:40vw;
+  height: 40vh;
+  flex-direction: column;
+  margin: 0 auto;
+  justify-content: center;
+  align-items: center;
+}
+h3{
+  font-weight: 100;
+}
+
+.card input{
+  width: 80%;
+  margin: 1rem;
+  height: 3rem;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.514);
+  outline: none;
+}
+.submit{
+  background-color: rgba(48, 155, 243, 0.863);
+  width: 20%;
+  font-size: 1.5rem;
+  text-align: center;
+  border-radius: 5px;
+  font-weight: 500;
+  cursor: pointer;
+}
+
