add send button for comments

--- a/insta-clone-frontend/src/App.css
+++ b/insta-clone-frontend/src/App.css
@@ -177,7 +177,11 @@ h3{
   cursor: pointer;
 }
 
-/*POST  */
+/*||POST  */
 .material-icons{
   cursor:pointer;
+}
+
+.comment_and_send{
+  display: flex;
 }
